# PyPNM

./: .gitattributes  .gitignore  CHANGELOG.md  Docs.url  README.RU.md  README.md  pnmlpnm.py  viewer.py
compatibility/: README.md
compatibility/16bpc/: gimp-2.10.38-ascii.pgm  gimp-2.10.38-ascii.ppm  gimp-2.10.38-bin.pgm  gimp-2.10.38-bin.ppm  photoshop-CS6-13.0.1.pgm  photoshop-CS6-13.0.1.ppm
compatibility/1bpc/: gimp-2.10.38-bin.pbm  gimp-2.10.38.rev1-ascii.pbm  photoshop-CS6-13.0.1.pbm  xnview-mp-1.8.3.pbm
compatibility/8bpc/: gimp-2.10.38-ascii.pgm  gimp-2.10.38-ascii.ppm  gimp-2.10.38-bin.pgm  gimp-2.10.38-bin.ppm  photoshop-CS6-13.0.1.pgm  photoshop-CS6-13.0.1.ppm  xnview-mp-1.8.3.pgm  xnview-mp-1.8.3.ppm
pypng/: __init__.py  pnglpng.py
pypnm/: README.md  __init__.py  pnmlpnm.py  pyproject.toml
samples/: 2x3x65535.pgm  3x2x255.pgm  3x2x255.ppm  P2_3x2x255.pgm  P2_3x2x65535.pgm  P3_3x2x255.ppm  P3_3x2x65535.ppm  P4_3x2x1.pbm  P6_3x2x65535.ppm
